added project references

--- a/LibraryManagement/LibraryManagement.csproj
+++ b/LibraryManagement/LibraryManagement.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagement.BLL\LibraryManagement.BLL.csproj" />
+    <ProjectReference Include="..\LibraryManagement.Model\LibraryManagement.Model.csproj" />
+  </ItemGroup>
+
 </Project>
