--- a/LibraryManagement.DAL/LibraryManagement.DAL.csproj
+++ b/LibraryManagement.DAL/LibraryManagement.DAL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagement.Model\LibraryManagement.Model.csproj" />
+  </ItemGroup>
+
 </Project>
